--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- Banners -->
     <section onmousemove="moveslider()" onmouseout="exitslider()" class="sliders">
         <div id="slider" class="slider">
-            <img src="img/andy-li-RndRFJ1v1kk-unsplash.jpg" alt="">
-            <img src="img/evgeni-tcherkasski-mXOlDLaInFs-unsplash.jpg" alt="">
-            <img src="img/mae-mu-BxsGyQwjwaw-unsplash.jpg" alt="">
+            <img src="img/Pao1.jpg" alt="">
+            <img src="img/Pao2.jpg" alt="">
+            <img src="img/Pao4.jpg" alt="">
             <img src="img/Banner04.jpg" alt="">
         </div>
         <div id="btns" class="btns">
